--- a/index.html
+++ b/index.html
@@ -44,63 +44,7 @@
             <section class="card">
                 <h3>Learning Activities</h3>
                 <ul>
-                    <li>
-                        <a href="lesson01/holygrail.html" target="_blank">[W1 Lesson 1] Holy Grail Practice</a>
-                    </li>
-                    <li>
-                        <a href="lesson02/design.html" target="_blank">[W2 Lesson 1] Design Principles Practice</a>
-                    </li>
-                    <li>
-                        <a href="lesson02/media-query.html" target="_blank">[W2 Lesson 2] Media Queries Practice</a>
-                    </li>
-                    <li>
-                        <a href="lesson02/design-principles.html" target="_blank">[W2 Assignment] Design Principles Document</a>
-                    </li>
-                    <li>
-                        <a href="lesson03/css-combinators.html" target="_blank">[W3 Lesson 1] CSS Combinators</a>
-                    </li>
-                    <li>
-                        <a href="https://codepen.io/Rainbowcraft-2/pen/OJrZNoO" target="_blank">[W3 Lesson 2] Pseudo Elements CodePen</a>
-                    </li>
-                    <li>
-                        <a href="https://codepen.io/Rainbowcraft-2/pen/VwqxjYb" target="_blank">[W3 Lesson 3] Responsive Menu CodePen</a>
-                    </li>
-                    <li>
-                        <a href="lesson03/chamber-site-plan.html" target="_blank">[W3 Assignment] Chamber Site Plan</a>
-                    </li>
-                    <li>
-                        <a href="https://codepen.io/Rainbowcraft-2/pen/OJroWGQ" target="_blank">[W4 Lesson 1] Pseudo Class CodePen</a>
-                    </li>
-                    <li>
-                        <a href="lesson05/bom.html" target="_blank">[W5 Lesson 1] Book of Mormon Top 10</a>
-                    </li>
-                    <li>
-                        <a href="lesson06/images/landscape.webp" target="_blank">[W6 Lesson 1] Optimized Landscape Image</a>
-                    </li>
-                    <li>
-                        <a href="lesson06/responsive-images.html" target="_blank">[W6 Lesson 2] Responsive Image</a>
-                    </li>
-                    <li>
-                        <a href="lesson07/lazyload.html" target="_blank">[W7 Lesson 1] Lazy Loading</a>
-                    </li>
-                    <li>
-                        <a href="lesson07/bom.html" target="_blank">[W7 Lesson 2] Book of Mormon Top 10 v2</a>
-                    </li>
-                    <li>
-                        <a href="lesson08/tablebuild.html" target="_blank">[W8 Lesson 1] HTML Tables</a>
-                    </li>
-                    <li>
-                        <a href="form-start/index.html" target="_blank">[W8 Lesson 2] HTML Forms</a>
-                    </li>
-                    <li>
-                        <a href="form.html" target="_blank">[W8 Assignment] Form Assignment</a>
-                    </li>
-                    <li>
-                        <a href="lesson09/new-ward-members.json" target="_blank">[W9 Lesson 1] New Ward Members JSON</a>
-                    </li>
-                    <li>
-                        <a href="lesson09/prophets.html" target="_blank">[W9 Lesson 2] Prophets Fetch API</a>
-                    </li>
+                    
                 </ul>
             </section>
             <section class="card">
@@ -123,5 +67,6 @@
 <script src="scripts/getdates.js"></script>
 <script src="scripts/hamburger.js"></script>
 <script src="scripts/visitcounter.js"></script>
+<script src="scripts/links.js"></script>
 </body>
 </html>
