--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="You just joined the Northwest Oregon Chamber of Commerce">
+    <meta name="description" content="The Northwest Oregon Chamber of Commerce is for learning and developing business skills and facilitating collaboration and shared growth between local businesses.">
     <meta name="author" content="Taren Moss">
-    <meta property="og:title" content="Thank You for Joining the Northwest Oregon Chamber of Commerce">
+    <meta property="og:title" content="Northwest Oregon Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://taren-moss.github.io/wdd230/chamber/images/preview.jpg">
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/chamber/index.html">
-    <title>Thank You for Joining the Northwest Oregon Chamber of Commerce</title>
+    <title>Northwest Oregon Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -23,7 +23,7 @@
             <div class="nav-small">
                 <a href="index.html">Home</a>
                 <a href="discover.html">Discover</a>
-                <a href="directory.html">Directory</a>
+                <a href="#">Directory</a>
                 <a href="join.html">Join</a>
             </div>
             <div class="nav-top">
@@ -43,11 +43,14 @@
         </div>
     </header>
     <main>
-        <div class="thanks">
-            <section id="thanks-message">
-                <h1>Welcome to the Chamber!</h1>
-                <h2>Your form has been sent. Thank you!</h2>
-            </section>
+        <h1>Directory</h1>
+        <h2 class="label">Members</h2>
+        <div class="buttons">
+            <button id="grid-button" name="grid">Grid</button>
+            <button id="list-button" name="list">List</button>
+        </div>
+        <div class="directory">
+           
         </div>
     </main>
     <footer>
@@ -63,5 +66,6 @@
 <script src="scripts/hamburger.js"></script>
 <script src="scripts/getdates.js"></script>
 <script src="scripts/themetogglesubpage.js"></script>
+<script src="scripts/directory.js"></script>
 </body>
 </html>
