--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -23,13 +23,13 @@
             <div class="nav-small">
                 <a href="index.html">Home</a>
                 <a href="#">Discover</a>
-                <a href="#">Directory</a>
+                <a href="directory.html">Directory</a>
                 <a href="join.html">Join</a>
             </div>
             <div class="nav-top">
                 <a href="index.html">Home</a>
                 <a href="#">Discover</a>
-                <a href="#">Directory</a>
+                <a href="directory.html">Directory</a>
                 <a href="join.html">Join</a>
             </div>
             <div class="nav-bottom">
