Weather API Practice

--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
 <script src="scripts/hamburger.js"></script>
 <script src="scripts/visitcounter.js"></script>
 <script src="scripts/links.js"></script>
+<script src="scripts/getweather.js"></script>
 </body>
 </html>
