--- a/test-site-sandbox/index.html
+++ b/test-site-sandbox/index.html
@@ -10,6 +10,7 @@
     <body>
         <input type="text" name="code-mark" pattern="(?=.*\d)(?=.*?[~!@#$%^&*;:,.])(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9]).{8,}" title="The Code Mark">
     </body>
+    <script src="getdata.js"></script>
 </html>
 <!--Just kind of messing around with tags, I think the preset (using !) is better-->
 <!--https://codepen.io/Rainbowcraft-2/pen/WNLELZP-->
