--- a/chamber/index.html
+++ b/chamber/index.html
@@ -56,10 +56,7 @@
             <h2 class="label">Weather</h2>
             <div>
                 <section class="card weather">
-                    <h3>[Location]</h3>
-                    <p id="temp">Temperature: 42°F</p>
-                    <p id="wind">Wind Speed: 16.2 MPH</p>
-                    <p id="windchill"></p>
+                    <h3>Weather</h3>
                 </section>
             </div>
         </div>
