--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             </section>
             <section class="card">
                 <h3>Information</h3>
-                <p>Oregon Northwest</p> <!--Public repository the whole internet can technically see. Will make more specific only when needed-->
-                <p>[Weather Placeholder]</p>
-                <p id="visitCounter"></p>
+                <p>Astoria, Oregon</p> <!--Public repository the whole internet can technically see. Will make more specific only when needed-->
+                <p id="weather"></p>
+                <div id="visitCounter"></div>
             </section>
         </div>
         <iframe title="map" id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d22097.798245413444!2d-123.81982715703492!3d46.18608545205935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1695863159934!5m2!1sen!2sus" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
