--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,6 +35,9 @@
             <div class="nav-bottom">
             </div>
         </nav>
+        <div id="meet-banner">
+
+        </div>
         <div class="switchbox">
             <label class="switch">
                 <input type="checkbox" id="theme-switch" aria-label="Dark/Light Theme Switch">
@@ -50,7 +53,7 @@
                 <img src="images/coast.webp" alt="Oregon Northwest Coast" width="1600" height="670">
             </picture>
             <h1>Northwest Oregon Chamber of Commerce</h1>
-            <a href="#" id="call">Join the Chamber!</a>
+            <a href="join.html" id="call">Join the Chamber!</a>
         </div>
         <div class="weatherspace">
             <h2 class="label">Weather</h2>
@@ -112,6 +115,7 @@
 <script src="scripts/hamburger.js"></script>
 <script src="scripts/getdates.js"></script>
 <script src="scripts/themetoggleindex.js"></script>
-<script src="scripts/windchill.js"></script>
+<script src="scripts/weather.js"></script>
+<script src="scripts/banner.js"></script>
 </body>
 </html>
