--- a/test-site-sandbox/index.html
+++ b/test-site-sandbox/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>Test Title</title>
     <body>
-        <input type="text" name="code-mark" pattern="(?=.*\d)(?=.*?[~!@#$%^&*;:,.])(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9]).{8,}" title="The Code Mark">
+        <div id="forecast">
+            
+        </div>
     </body>
-    <script src="scripts/getdata.js"></script>
+    <script src="scripts/test.js"></script>
 </html>
 <!--Just kind of messing around with tags, I think the preset (using !) is better-->
 <!--https://codepen.io/Rainbowcraft-2/pen/WNLELZP-->
