Company Spotlight + Improvements

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -86,19 +86,7 @@
         </div>
         <div class="spotlightspace">
             <h2 class="label">Company Spotlights</h2>
-            <div>
-                <section class="card spotlight">
-                    <h3>Spotlight Name</h3>
-                    <p>[Spotlight info goes here]</p>
-                </section>
-                <section class="card spotlight">
-                    <h3>Spotlight Name</h3>
-                    <p>[Spotlight info goes here]</p>
-                </section>
-                <section class="card spotlight">
-                    <h3>Spotlight Name</h3>
-                    <p>[Spotlight info goes here]</p>
-                </section>
+            <div id="spotlight">
             </div>
         </div>
     </main>
@@ -117,5 +105,6 @@
 <script src="scripts/themetoggleindex.js"></script>
 <script src="scripts/weather.js"></script>
 <script src="scripts/banner.js"></script>
+<script src="scripts/spotlight.js"></script>
 </body>
 </html>
