--- a/chamber/join.html
+++ b/chamber/join.html
@@ -77,6 +77,7 @@
                         <li>Gain access to basic business training</li>
                         <li>Gain access to advanced business training</li>
                         <li>Gain access to exclusive events</li>
+                        <li>Gain a place in the Company Spotlights</li>
                     </ul>
                 </section>
                 <section class="card">
