--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -11,36 +11,28 @@
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/chamber/index.html">
     <title>Thank You for Joining the Northwest Oregon Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="stylesheet" href="styles/test-base.css">
+    <link rel="stylesheet" href="styles/test-medium.css">
+    <link rel="stylesheet" href="styles/test-larger.css">
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
         <nav>
             <a id="menu" href="#" aria-label="menu"></a>
-            <div class="nav-small">
+            <div class="navigation">
                 <a href="index.html">Home</a>
                 <a href="discover.html">Discover</a>
                 <a href="directory.html">Directory</a>
                 <a href="join.html">Join</a>
             </div>
-            <div class="nav-top">
-                <a href="index.html">Home</a>
-                <a href="discover.html">Discover</a>
-                <a href="#">Directory</a>
-                <a href="join.html">Join</a>
-            </div>
             <div class="nav-bottom">
             </div>
         </nav>
-        <div class="switchbox">
-            <label class="switch">
-                <input type="checkbox" id="theme-switch" aria-label="Dark/Light Theme Switch">
-                <span class="slider"></span>
-            </label>
-        </div>
+        <label class="switch">
+            <input type="checkbox" id="theme-switch" aria-label="Dark/Light Theme Switch">
+            <span class="slider"></span>
+        </label>
     </header>
     <main>
         <div class="thanks">
