--- a/chamber/join.html
+++ b/chamber/join.html
@@ -107,10 +107,10 @@
                             <legend>Company Information</legend>
                             <label>Business/Organization*<input type="text" id="businessName" name="businessName" autocomplete="off"  required></label>
                             <div>Membership Level</div>
-                                <label class="membership"><input type="radio" name="membership" value="nonprofit"> Non Profit Membership</label>
-                                <label class="membership"><input type="radio" name="membership" value="bronze"> Bronze Membership</label>
-                                <label class="membership"><input type="radio" name="membership" value="silver"> Silver Membership</label>
-                                <label class="membership"><input type="radio" name="membership" value="gold"> Gold Membership</label>
+                                <label class="membership"><input type="radio" name="membership" value="nonprofit" class="radio"> Non Profit Membership</label>
+                                <label class="membership"><input type="radio" name="membership" value="bronze" class="radio"> Bronze Membership</label>
+                                <label class="membership"><input type="radio" name="membership" value="silver" class="radio"> Silver Membership</label>
+                                <label class="membership"><input type="radio" name="membership" value="gold" class="radio"> Gold Membership</label>
                             <label class="businessDescription">Description<textarea id="businessDesc" name="businessDesc"></textarea></label>
                         </fieldset>
                         <input type="hidden" id="date" name="date">
