Many Small Improvements

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,19 +11,19 @@
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/chamber/directory.html">
     <title>Directory of Members - Northwest Oregon Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/test-base.css">
-    <link rel="stylesheet" href="styles/test-medium.css">
-    <link rel="stylesheet" href="styles/test-larger.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
         <nav>
-            <a id="menu" href="#" aria-label="menu"></a>
+            <a class="menu" href="#" aria-label="menu"></a>
             <div class="navigation">
                 <a href="index.html">Home</a>
                 <a href="discover.html">Discover</a>
-                <a href="#" id="current">Directory</a>
+                <a href="#" class="current">Directory</a>
                 <a href="join.html">Join</a>
             </div>
             <div class="nav-bottom">
