--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,17 +11,17 @@
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/chamber/index.html">
     <title>Northwest Oregon Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/test-base.css">
-    <link rel="stylesheet" href="styles/test-medium.css">
-    <link rel="stylesheet" href="styles/test-larger.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
         <nav>
-            <a id="menu" href="#" aria-label="menu"></a>
+            <a class="menu" href="#" aria-label="menu"></a>
             <div class="navigation">
-                <a href="#" id="current">Home</a>
+                <a href="#" class="current">Home</a>
                 <a href="discover.html">Discover</a>
                 <a href="directory.html">Directory</a>
                 <a href="join.html">Join</a>
@@ -57,19 +57,19 @@
             <div>
                 <h2 class="label">Upcoming Events</h2>  
                 <div class="flex-grid">
-                    <section class="card event">
+                    <section class="card event hover">
                         <h3>Event</h3>
                         <p>[Event info goes here]</p>
                     </section>
-                    <section class="card event">
+                    <section class="card event hover">
                         <h3>Event</h3>
                         <p>[Event info goes here]</p>
                     </section>
-                    <section class="card event">
+                    <section class="card event hover">
                         <h3>Event</h3>
                         <p>[Event info goes here]</p>
                     </section>
-                    <section class="card event">
+                    <section class="card event hover">
                         <h3>Event</h3>
                         <p>[Event info goes here]</p>
                     </section>
