--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -11,15 +11,15 @@
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/chamber/index.html">
     <title>Thank You for Joining the Northwest Oregon Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/test-base.css">
-    <link rel="stylesheet" href="styles/test-medium.css">
-    <link rel="stylesheet" href="styles/test-larger.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
         <nav>
-            <a id="menu" href="#" aria-label="menu"></a>
+            <a class="menu" href="#" aria-label="menu"></a>
             <div class="navigation">
                 <a href="index.html">Home</a>
                 <a href="discover.html">Discover</a>
