--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -45,7 +45,7 @@
                         <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkedin.webp" alt="linkedin icon" width="50" height="50"></a>
                     </section>
                 </div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d27219.86761676072!2d-86.9755836781463!3d20.4930166139833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scozumel%20Terminal%20Puerta%20Maya!5e0!3m2!1sen!2sus!4v1702166103341!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d27219.86761676072!2d-86.9755836781463!3d20.4930166139833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scozumel%20Terminal%20Puerta%20Maya!5e0!3m2!1sen!2sus!4v1702166103341!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" aria-label="Scoots Area Map"></iframe>
             </section>
             <section class="contact-form">
                 <h2 class="label">Send Feedback</h2>
@@ -67,7 +67,7 @@
             <section class="about">
                 <p class="year"></p>
                 <a href="contact.html" target="blank">Contact us here!</a>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d139223.4356364617!2d-86.98303046767393!3d20.439457170872224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4ef8efb0d19327%3A0x342ebcae5c018bfc!2sCozumel!5e0!3m2!1sen!2sus!4v1701806994286!5m2!1sen!2sus" width="300" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d139223.4356364617!2d-86.98303046767393!3d20.439457170872224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4ef8efb0d19327%3A0x342ebcae5c018bfc!2sCozumel!5e0!3m2!1sen!2sus!4v1701806994286!5m2!1sen!2sus" width="300" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" aria-label="Map of Cozumel"></iframe>
                 </section>
             <section class="social">
                 <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.webp" alt="facebook icon" width="50" height="50"></a>
