--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -61,7 +61,7 @@
                     <label>Person Count*<input type="text" id="count" name="count" pattern="[0-9]{1,2}" required></label>
                     <label for="rental-type">Rental Type*</label>
                     <select id="rental-type" name="rental-type" required>
-                        <option value="unselected">~Unselected~</option>
+                        <option value="">~Unselected~</option>
                         <option value="metro-scooter">~Honda Metro Scooter</option>
                         <option value="dio-scooter">~Honda Dio Scooter</option>
                         <option value="pcx150-scooter">~Honda PCX150 Scooter</option>
