--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -34,16 +34,16 @@
             <section class="contact">
                 <h2 class="label">Contact Us</h2>
                 <div class="contact-info">
-                    <section class="flex">
+                    <div class="flex">
                         <p>Phone<br>(52)-(987)-123-4567</p>
                         <p>Email<br>scoots-de-cozumel.support@gmail.com</p>
-                    </section>
+                    </div>
                     <h2 class="label">Social Media</h2>
-                    <section class="social">
+                    <div class="social">
                         <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.webp" alt="facebook icon" width="50" height="50"></a>
                         <a href="https://twitter.com/" target="_blank"><img src="images/twitter.webp" alt="twitter icon" width="50" height="50"></a>
                         <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkedin.webp" alt="linkedin icon" width="50" height="50"></a>
-                    </section>
+                    </div>
                 </div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d27219.86761676072!2d-86.9755836781463!3d20.4930166139833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scozumel%20Terminal%20Puerta%20Maya!5e0!3m2!1sen!2sus!4v1702166103341!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" aria-label="Scoots Area Map"></iframe>
             </section>
@@ -64,15 +64,15 @@
     </main>
     <footer class="flex">
         <div>
-            <section class="about">
+            <div class="about">
                 <p class="year"></p>
                 <a href="contact.html" target="blank">Contact us here!</a>
-                </section>
-            <section class="social">
+            </div>
+            <div class="social">
                 <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.webp" alt="facebook icon" width="50" height="50"></a>
                 <a href="https://twitter.com/" target="_blank"><img src="images/twitter.webp" alt="twitter icon" width="50" height="50"></a>
                 <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkedin.webp" alt="linkedin icon" width="50" height="50"></a>
-            </section>
+            </div>
         </div>
         <img src="images/logo.webp" alt="~Scoots~ Logo" width="180" height="180">
     </footer>
