--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -58,15 +58,15 @@
     </main>
     <footer class="flex">
         <div>
-            <section class="about">
+            <div class="about">
                 <p class="year"></p>
                 <a href="contact.html" target="blank">Contact us here!</a>
-            </section>
-            <section class="social">
+            </div>
+            <div class="social">
                 <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.webp" alt="facebook icon" width="50" height="50"></a>
                 <a href="https://twitter.com/" target="_blank"><img src="images/twitter.webp" alt="twitter icon" width="50" height="50"></a>
                 <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkedin.webp" alt="linkedin icon" width="50" height="50"></a>
-            </section>
+            </div>
         </div>
         <img src="images/logo.webp" alt="~Scoots~ Logo" width="180" height="180">
     </footer>
