--- a/scoots/confirmed.html
+++ b/scoots/confirmed.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://taren-moss.github.io/wdd230/scoots/images/preview.jpg">
     <meta property="og:url" content="https://taren-moss.github.io/wdd230/scoots/contact.html">
-    <title>Contact ~Scoots~</title>
+    <title>Confirmation ~Scoots~</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
